RESOLVED FIXED264896
Regression(267645@main) ~3MB increase in binary size
https://bugs.webkit.org/show_bug.cgi?id=264896
Summary Regression(267645@main) ~3MB increase in binary size
Chris Dumez
Reported 2023-11-15 13:16:33 PST
267645@main seems to have caused a ~3MB increase in binary size.
Attachments
Chris Dumez
Comment 1 2023-11-15 15:05:32 PST
EWS
Comment 2 2023-11-15 20:55:12 PST
Committed 270804@main (ed83f1ea3c34): <https://commits.webkit.org/270804@main> Reviewed commits have been landed. Closing PR #20560 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-11-15 20:56:15 PST
WebKit Commit Bot
Comment 4 2023-11-16 07:41:07 PST
Re-opened since this is blocked by bug 264950
Chris Dumez
Comment 5 2023-11-16 20:58:38 PST
EWS
Comment 6 2023-11-17 08:45:47 PST
Committed 270891@main (4dacd4adab94): <https://commits.webkit.org/270891@main> Reviewed commits have been landed. Closing PR #20648 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.