Regression(267645@main) ~3MB increase in binary size https://bugs.webkit.org/show_bug.cgi?id=264896

Unreviewed, partial revert of 267645@main to move some JSC comparison
operators back out of line. My patch inlined them when I defaulted them
as it doesn't seem possible at the moment to default a comparison operator
outside the class.

* Source/JavaScriptCore/b3/B3Effects.cpp:
* Source/JavaScriptCore/b3/B3Effects.h:
* Source/JavaScriptCore/dfg/DFGAvailabilityMap.cpp:
* Source/JavaScriptCore/dfg/DFGAvailabilityMap.h:

Canonical link: https://commits.webkit.org/270804@main